# Transport

./: CMakeLists.txt  Transport.sln  class_diagram.puml  main.cpp
Transport/: Auto.cs  Avia.cs  CargoPlaner.cs  ICargo.cs  IPassenger.cs  PassengerPlaner.cs  Program.cs  Transport.cs  class_diagram.puml
lib/: ICargo.h  IPassenger.h  Transport.h
lib/AirTransport/: AirBus.h  AirTransport.h
lib/MotorTransport/: Bus.h  MotorTransport.h  Truck.h
